--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <a href="#card">
             <div class="header__arrow">
-                <img src="img/icons/arrow-down.svg" alt="">
+                <img class="header__arrow-icon" src="img/icons/arrow-down.svg" alt="">
             </div>
         </a>
 
