--- a/index.html
+++ b/index.html
@@ -89,6 +89,151 @@
 
         </section>
 
+        <div class="wrapper">
+
+            <section class="info" id="invest">
+
+                <div class="info__title">
+                    <h2 class="section-title">investorious <span>smart</span></h2>
+                </div>
+
+                <div class="info__boxes">
+
+                    <div class="info__box">
+
+                        <img src="/img/banknotes-1463132_640.jpg" alt="banknoty" class="info__box-img">
+
+                        <h3 class="info__box-title">money</h3>
+
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quae
+                            blanditiis id quia repellendus libero natus consequuntur optio maxime! Laboriosam
+                            consequuntur deleniti ipsum hic odit illo optio corrupti soluta cum!</p>
+                        <p class="info__box-text">Quibusdam a harum minima, consectetur, facere repellat voluptates
+                            voluptatum sed ex provident totam, ipsa animi quia? Temporibus praesentium et delectus
+                            accusantium debitis tempora natus. Nobis accusantium cupiditate aperiam quas excepturi.</p>
+
+                        <a href="#" class="info__box-link">read me more...</a>
+
+                    </div>
+                    <div class="info__box">
+
+                        <img src="/img/diamond-316610_640.jpg" alt="Diamenty" class="info__box-img">
+
+                        <h3 class="info__box-title">diamonds</h3>
+
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quae
+                            blanditiis id quia repellendus libero natus consequuntur optio maxime! Laboriosam
+                            consequuntur deleniti ipsum hic odit illo optio corrupti soluta cum!</p>
+                        <p class="info__box-text">Quibusdam a harum minima, consectetur, facere repellat voluptates
+                            voluptatum sed ex provident totam, ipsa animi quia? Temporibus praesentium et delectus
+                            accusantium debitis tempora natus. Nobis accusantium cupiditate aperiam quas excepturi.</p>
+
+                        <a href="#" class="info__box-link">read me more...</a>
+
+                    </div>
+                    <div class="info__box">
+
+                        <img src="/img/gold-2048295_640.jpg" alt="Sztaby złota" class="info__box-img">
+
+                        <h3 class="info__box-title">gold</h3>
+
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quae
+                            blanditiis id quia repellendus libero natus consequuntur optio maxime! Laboriosam
+                            consequuntur deleniti ipsum hic odit illo optio corrupti soluta cum!</p>
+                        <p class="info__box-text">Quibusdam a harum minima, consectetur, facere repellat voluptates
+                            voluptatum sed ex provident totam, ipsa animi quia? Temporibus praesentium et delectus
+                            accusantium debitis tempora natus. Nobis accusantium cupiditate aperiam quas excepturi.</p>
+
+                        <a href="#" class="info__box-link">read me more...</a>
+
+                    </div>
+
+                </div>
+
+                <img src="/img/icons/square.svg" alt="" class="info__bg-icon info__bg-icon--one">
+                <img src="/img/icons/square.svg" alt="" class="info__bg-icon info__bg-icon--two">
+                <img src="/img/icons/x.svg" alt="" class="info__bg-icon info__bg-icon--three">
+                <img src="/img/icons/x.svg" alt="" class="info__bg-icon info__bg-icon--four">
+
+            </section>
+
+        </div>
+
+        <section class="plans" id="plan">
+
+            <div class="wrapper">
+
+                <h2 class="section-title">plan your <span>future</span></h2>
+
+                <div class="plans_box">
+
+                    <img src="img/icons/briefcase.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>#easyMoney</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p><b>Contribution:</b></p>
+                        <p>$250.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p><b>Term:</b></p>
+                        <p>2 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p><b>Profit:</b></p>
+                        <p>5% - 10%</p>
+                    </div>
+
+                </div>
+
+                <div class="plans_box">
+
+                    <img src="img/icons/cast.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>reliableStuff</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p><b>Contribution:</b></p>
+                        <p>$5.000.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p><b>Term:</b></p>
+                        <p>5 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p><b>Profit:</b></p>
+                        <p>25% - 35%</p>
+                    </div>
+
+                </div>
+                <div class="plans_box">
+
+                    <img src="img/icons/film.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>allIn</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p><b>Contribution:</b></p>
+                        <p>$15.000.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p><b>Term:</b></p>
+                        <p>5 - 10 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p><b>Profit:</b></p>
+                        <p>50% - 75%</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 
