--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
         </div>
 
         <section class="plans" id="plan">
-
+            
             <div class="wrapper">
 
                 <h2 class="section-title">plan your <span>future</span></h2>
 
-                <div class="plans_box">
+                <div class="plans__box">
 
                     <img src="img/icons/briefcase.svg" alt="" class="plans__item plans__item-icon">
 
@@ -187,7 +187,7 @@
 
                 </div>
 
-                <div class="plans_box">
+                <div class="plans__box">
 
                     <img src="img/icons/cast.svg" alt="" class="plans__item plans__item-icon">
 
@@ -208,7 +208,7 @@
                     </div>
 
                 </div>
-                <div class="plans_box">
+                <div class="plans__box">
 
                     <img src="img/icons/film.svg" alt="" class="plans__item plans__item-icon">
 
@@ -231,8 +231,22 @@
                 </div>
 
             </div>
-
         </section>
+
+        <section class="newsletter">
+            <div class="wrapper newsletter__wrapper">
+               
+                <div class="newsletter__text">
+                    <p>Sign up for newsletter..</p>
+                </div>
+                <div class="newsletter__form">
+                 <input type="text">
+                 <button>Subscribe</button>
+                </div>
+
+            </div>
+        </section>
+
 
     </main>
 
