--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
 
         <section class="plans" id="plan">
-            
+
             <div class="wrapper">
 
                 <h2 class="section-title">plan your <span>future</span></h2>
@@ -235,18 +235,60 @@
 
         <section class="newsletter">
             <div class="wrapper newsletter__wrapper">
-               
+
                 <div class="newsletter__text">
                     <p>Sign up for newsletter..</p>
                 </div>
                 <div class="newsletter__form">
-                 <input type="text">
-                 <button>Subscribe</button>
+                    <input type="text">
+                    <button>Subscribe</button>
                 </div>
 
             </div>
         </section>
+        <section class="gallery">
+            <img src="img/gallery/1.jpg" alt="gold">
+            <img src="img/gallery/2.jpg" alt="gold">
+            <img src="img/gallery/3.jpg" alt="gold">
+            <img src="img/gallery/4.jpg" alt="gold">
+            <img src="img/gallery/5.jpg" alt="gold">
+            <img src="img/gallery/6.jpg" alt="gold">
+            <img src="img/gallery/7.jpg" alt="gold">
+            <img src="img/gallery/8.jpg" alt="gold">
+        </section>
 
+        <section class="contact" id="contact">
+
+            <div class="wrapper">
+
+                <h2 class="section-title">contact <span>us</span> </h2>
+
+                <form class="contact__form">
+
+                    <div class="contact__form-box">
+                        <label for="name">Your name:</label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="email">Your email:</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" cols="30" rows="10"></textarea>
+                    </div>
+
+                    <button type="submit" class="contact__form-btn">Submit</button>
+
+                </form>
+
+
+
+
+            </div>
+
+
+        </section>
 
     </main>
 
