--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     <div class="info__box">
 
-                        <img src="/img/banknotes-1463132_640.jpg" alt="banknoty" class="info__box-img">
+                        <img src="./img/banknotes-1463132_640.jpg" alt="banknoty" class="info__box-img">
 
                         <h3 class="info__box-title">money</h3>
 
@@ -117,7 +117,7 @@
                     </div>
                     <div class="info__box">
 
-                        <img src="/img/diamond-316610_640.jpg" alt="Diamenty" class="info__box-img">
+                        <img src="./img/diamond-316610_640.jpg" alt="Diamenty" class="info__box-img">
 
                         <h3 class="info__box-title">diamonds</h3>
 
@@ -133,7 +133,7 @@
                     </div>
                     <div class="info__box">
 
-                        <img src="/img/gold-2048295_640.jpg" alt="Sztaby złota" class="info__box-img">
+                        <img src="../img/gold-2048295_640.jpg" alt="Sztaby złota" class="info__box-img">
 
                         <h3 class="info__box-title">gold</h3>
 
