--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="info__box">
 
-                        <img src="../img/gold-2048295_640.jpg" alt="Sztaby złota" class="info__box-img">
+                        <img src="./img/gold-2048295_640.jpg" alt="Sztaby złota" class="info__box-img">
 
                         <h3 class="info__box-title">gold</h3>
 
